fix(ARC-2859): fix newspaper ui not fully visible on ipad devices
https://meemoo.atlassian.net/browse/ARC-2859

--- a/src/modules/ie-objects/ObjectDetailPage.module.scss
+++ b/src/modules/ie-objects/ObjectDetailPage.module.scss
@@ -94,8 +94,8 @@ $zendesk-feedback-button-margin-bottom-mobile: 3.5rem;
 		grid-template-rows: minmax(0, max-content) max-content 1fr minmax(0, max-content);
 		grid-template-columns: $back-to-global-search-button-width-desktop 16fr 10fr;
 		width: 100vw;
-		min-height: calc(100vh - $top-navigation-bar-height);
-		max-height: calc(100vh - $top-navigation-bar-height);
+		min-height: calc($view-height - $top-navigation-bar-height);
+		max-height: calc($view-height - $top-navigation-bar-height);
 		place-items: stretch stretch;
 		align-content: stretch;
 		transition: 100ms ease-out;
@@ -341,7 +341,7 @@ $zendesk-feedback-button-margin-bottom-mobile: 3.5rem;
 			grid-column: 1/3;
 
 			@media (max-width: $breakpoint-md) {
-				height: calc(100vh - $top-navigation-bar-height - $metadata-media-ocr-tabs-height-mobile);
+				height: calc($view-height - $top-navigation-bar-height - $metadata-media-ocr-tabs-height-mobile);
 			}
 		}
 	}
