--- a/src/modules/ie-objects/components/CollapsableBlade/CollapsableBlade.module.scss
+++ b/src/modules/ie-objects/components/CollapsableBlade/CollapsableBlade.module.scss
@@ -4,7 +4,7 @@
 $component: "c-collapsable-blade";
 $expand-button-height-desktop: 8.8rem;
 $expand-button-height-mobile: 6.5rem;
-$max-drawer-height-available: calc(100vh - #{$top-navigation-bar-height} - #{$top-visitor-space-bar-height});
+$max-drawer-height-available: calc($view-height - #{$top-navigation-bar-height} - #{$top-visitor-space-bar-height});
 $max-drawer-height-desired: 80rem;
 $max-drawer-height: min($max-drawer-height-desired, $max-drawer-height-available);
 
@@ -79,8 +79,7 @@ $max-drawer-height: min($max-drawer-height-desired, $max-drawer-height-available
 	}
 
 	&__scrollable {
-		overflow-x: hidden;
-		overflow-y: auto;
+		overflow: hidden auto;
 		height: max-content;
 		max-height: calc($max-drawer-height - $expand-button-height-mobile);
 
