--- a/src/modules/shared/components/ErrorBoundary/ErrorBoundary.module.scss
+++ b/src/modules/shared/components/ErrorBoundary/ErrorBoundary.module.scss
@@ -6,11 +6,11 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: calc(100vh - #{$c-navigation-height-md});
+	height: calc($view-height - #{$c-navigation-height-md});
 	text-align: center;
 	line-height: 3rem;
 
 	@media (min-width: $breakpoint-md) {
-		height: calc(100vh - #{$c-navigation-height});
+		height: calc($view-height - #{$c-navigation-height});
 	}
 }
