--- a/src/modules/shared/layouts/SidebarLayout/SidebarLayout.module.scss
+++ b/src/modules/shared/layouts/SidebarLayout/SidebarLayout.module.scss
@@ -9,7 +9,7 @@ $l-sub-sidebar-width: 27.5rem;
 	flex-flow: row nowrap;
 	flex-grow: 1;
 	height: 100%;
-	min-height: calc(100vh - $top-navigation-bar-height);
+	min-height: calc($view-height - $top-navigation-bar-height);
 
 	&__navigation {
 		display: none;
